<?xml version="1.0" encoding="utf-8" ?>

<!DOCTYPE resources [<!ENTITY appname "MS Test">]>

<resources>

    <string name="app_name">&appname;</string>

    <string name="terms_str">I agree with the terms of use</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="reset">Reset</string>
    <string name="errorLogin">Username or password is invalid!</string>

    <string name="logoName">&appname; Logo</string>
    <string name="logout">Log-out</string>
    <string name="logoutQuestion">Do you really want to log-out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="search">Search</string>
    <string name="searchHint">Input a search query</string>
    <string name="searchEmptyError">You have to type something first!</string>

    <string name="favAnime">Favourite anime shows</string>
    <string name="users">Users</string>

</resources>
