<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:src="@drawable/avatar"
            android:contentDescription="@string/logoName"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="190dp"
            android:textSize="20sp"/>

    </RelativeLayout>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:rowCount="4"
        android:columnCount="1"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:layout_marginBottom="15dp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_marginBottom="15dp"/>

        <CheckBox
            android:id="@+id/cbTerms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_str"
            android:layout_marginBottom="15dp"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="1"
            android:layout_marginTop="80dp">

            <Button
                android:id="@+id/btnLogin"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_columnWeight="1"/>

            <Button
                android:id="@+id/btnReset"
                android:layout_height="wrap_content"
                android:text="@string/reset"
                android:layout_columnWeight="1"/>
        </GridLayout>

    </GridLayout>

</LinearLayout>